--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header h1
 #color_mask
 {
 	position: absolute;
-	opacity: 0.2;
+	opacity: 0.3;
 	border: 0;
 	z-index: 40;
   float: left;
@@ -43,10 +43,10 @@ header h1
 	left: 9em;
 }
 
-/*main part of the home page*/
+/*index page section*/
 #about
 {
-	margin-top: 3em;
+	margin-top: 15px;
 	text-align: justify;
 }
 
@@ -55,10 +55,33 @@ span
 	padding-left: 40px;
 }
 
-#valeria_img
+.valeria_img
 {
 	height: auto;
 	width: 100%;
 	float: right;
-	padding-top: 20%;
+	padding-bottom: 10%;
+}
+
+#about_text
+{
+	border: solid powderblue 1px;
+	font-weight: 400;
+	/*background-color: powderblue;*/
+}
+
+/*books page section*/
+#warrior, #locked_heart, #great_masters, #liberty
+{
+	margin-top: 40px;
+	font-size: 1.5rem;
+	text-align: center;
+}
+
+.book_img
+{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	width: 80%;
 }
