--- a/style.css
+++ b/style.css
@@ -75,16 +75,28 @@ span
 /*books page section*/
 #warrior, #locked_heart, #great_masters, #liberty
 {
-	margin-top: 40px;
-	font-size: 1.5rem;
+	margin-top: 20px;
+	font-size: 1.2rem;
 	text-align: center;
+  height: 50px;
 }
 
+.col-sm-3
+{
+  margin-top: 50px;
+}
+
+p
+{
+  text-align: justify;
+}
 .book_img
 {
+  margin-bottom: 40px;
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
-	width: 80%;
+	width: auto;
+  max-height: 300px;
 }
 /*end of the books section*/
