--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ header img
 	width: 100%;
 }
 
+.nav
+{
+	margin-bottom: 50px;
+}
+
 header h1
 {
 	font-weight: 600;
@@ -79,11 +84,6 @@ span
 	font-size: 1.2rem;
 	text-align: center;
   height: 50px;
-}
-
-.col-sm-3
-{
-  margin-top: 50px;
 }
 
 p
