--- a/style.css
+++ b/style.css
@@ -86,10 +86,21 @@ span
   height: 50px;
 }
 
+div > div > div img
+{
+	margin-bottom: 40px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	max-height: 100%;
+	max-width: 100%;
+}
+
 p
 {
   text-align: justify;
 }
+
 .book_img
 {
   margin-bottom: 40px;
@@ -99,4 +110,5 @@ p
 	width: auto;
   max-height: 300px;
 }
+
 /*end of the books section*/
