little changes in the paint page

--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ span
 	font-weight: 400;
 }
 
+#valeria_first_img
+{
+	margin-bottom: 100px;
+}
 /*end of the index section*/
 
 /*books page section*/
